--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,9 +1,12 @@
+2016年11月25日
+v0.1.3 - [add] @Column软删除标记,softDelete=[0,1]
+
 2016年11月15日
 v0.1.2 - [fix] db的tinyint(4)映射到java Boolean全是false的问题。
 
 2016年10月13日
-v0.1.1 - update默认修改为只更新null值
+v0.1.1 - [add] update默认修改为只更新null值
 
 2016年6月28日
-- 支持in (?)输入参数为数组类型
+v0.0.1 - [add] 支持in (?)输入参数为数组类型
 
