--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -3,7 +3,9 @@ TOFIX
 
 2017年3月7日
 v0.1.5 - [add] 增加insertWhereNotExist中where条件自动加上软删除标记
-
+         [add] 增加批量insert方法
+         [add] 增加随机主键配置
+         
 2016年11月25日
 v0.1.3 - [add] @Column软删除标记,softDelete=[0,1]
          [add] 增加@Column默认值、插入和更新时设置Date
