--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,5 +1,7 @@
-TOFIX
-1. 修复软删除where的优先级问题
+
+
+2017年3月17日
+v0.1.7 - [fix] 修复软删除where的优先级问题,当包含or逻辑的情况
 
 2017年3月13日
 v0.1.6 - [fix] 修复数据库tinyint(1)到Java Integer类型的转换问题
