--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,4 +1,6 @@
-
+2017年3月18日
+v0.2.0 - [add] 增加关联查询@RelatedColumn
+         [del] 删除<T> T getByKey(Class<?> clazz, Map<String, Object> keyMap)接口，原因：容易使用出错
 
 2017年3月17日
 v0.1.7 - [fix] 修复软删除where的优先级问题,当包含or逻辑的情况
