--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,5 +1,5 @@
 2017年5月4日
-v0.3.1 - [fix] 修复查分页条件有group by时,总页数计算问题
+v0.3.1 - [fix] 修复查分页条件有group by时,总页数计算问题; 该版本起查询总数均使用FOUND_ROWS()。
 
 2017年4月6日
 v0.3.0 - [add] 增加join查询的接口
