--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,6 @@
+2017年5月5日
+v0.3.2 - [fix] 关联查询时，查询总数使用FOUND_ROWS()返回结果是错的。
+
 2017年5月4日
 v0.3.1 - [fix] 修复查分页条件有group by时,总页数计算问题; 该版本起查询总数均使用FOUND_ROWS()。
        - [add] 当查询参数传入为List,Set,[]时，如果其值为空，自动加入null值，这样in (?)查询条件不会报错。
