--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,7 @@
+2017年6月10日
+v0.3.7 - [add] 增加isExist和isExistAtLeast两个方法
+       - [del] 标记DBHelper中jdbcTemplate的基本封装方法为废弃@Deprecated
+
 2017年5月27日
 v0.3.6 - [add] 增加单表select表别名t配置，join表别名支持配置
        - [add] 增加updateAll接口
