--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,6 @@
+2018年1月24日
+v0.5.2 - [improve] 允许拦截器在insert/update/delete对象前对对象进行修改
+
 2017年12月22日
 v0.5.1 - [fix] 当update对象时，如果软删除标记为是null，则自动设置为软删除的未删除状态
        - [improve] 查询相关代码优化
