--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -4,6 +4,7 @@ v0.6.0 - [add] IDBHelperDataService接口方法带上
 			   Class<?> remoteClass, String remoteColumn四个参数，方便该接口支持更多功能
        - [del] 去掉DOInfoReader中对反射类信息的缓存
        - [add] 增加ExcludeInheritedColumn排除掉父类字段的读取的特性
+       - [improve] RelatedColumn注解的字段，当查询不到数据且原字段值不为null时，不改动原字段的值
 
 2018年1月24日
 v0.5.2 - [improve] 允许拦截器在insert/update/delete对象前对对象进行修改
