--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,7 @@
+2018年3月7日
+v0.6.2 - [add] 增加dbHelper的executeAfterCommit方法，用于实现事务提交后执行指定代码
+       - [improve] 新增修改删除的拦截器after*方法，如果当前有事务，则安排在事务提交后再执行
+       
 2018年3月1日
 v0.6.1 - [fix] 修改JoinTable中计算列的字段映射问题
        - [add] 新增单独处理RelatedColumn的方法: handleRelatedColumn
