--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,7 @@
+2018年5月5日
+v0.7.3 - [add] DBHelper增加setTimeoutWarningCallback方法
+       - [improve] 将IDBHelperDataService从com.pugwoo.dbhelper.annotaion移到com.pugwoo.dbheper
+
 2018年5月3日
 v0.7.2 - [add] DBHelper增加delete(List)方法
 
