--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,4 +1,5 @@
 2018年5月6日
+v0.7.5 - [fix] 修复DBHelperInterceptor拦截器beforeUpdateCustom和beforeDeleteCustom参数问题
 v0.7.4 - [add] DBHelperInterceptor拦截器beforeUpdateCustom和beforeDeleteCustom增加自定义set扩展
        - [improve] RelatedColumn关联查询参数查询时去重
 
