--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,6 @@
+2018年5月7日
+v0.7.6 - [fix] 修复当deleteByKey和拦截器并存时，试图在软删除前设置数据，无法设置的问题
+
 2018年5月6日
 v0.7.5 - [fix] 修复DBHelperInterceptor拦截器beforeUpdateCustom和beforeDeleteCustom参数问题
 v0.7.4 - [add] DBHelperInterceptor拦截器beforeUpdateCustom和beforeDeleteCustom增加自定义set扩展
