--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,5 +1,6 @@
 2018年5月23日
 v0.8.2 - [improve] 对于not in(?)表达式，如果传入的参数为空，那么等价于所有值被匹配到。原来是不匹配。
+       - [add] 增加SubQuery参数，支持传入in (?)表达式，彻底处理了软删除标记位在代码中出现的情况
 
 2018年5月13日
 v0.8.1 - [improve] 优化updateAll方法的性能
