--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.9.2 - [update] 升级jsqlparser为2.0，升级jackson为2.9.8
+
 2019年4月1日
 v0.9.1 - [add] 增加乐观锁支持，在Column上指定casVersion为true即生效
        - [rename] DBHelperInterceptor拦截器中方法beforeUpdateCustom修改为beforeUpdateAll
