--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 2019年5月9日
 v0.9.2 - [update] 升级jsqlparser为2.0，升级jackson为2.9.8
        - [del] 移除nimble-orm对双引号表示字符串的支持，只支持单引号表示
-       - [improve] 完善文档说明，简化代码
+       - [improve] 完善文档说明，简化代码；修改updateCustom方式不支持casVersion的笔误，实际上支持
 
 2019年4月1日
 v0.9.1 - [add] 增加乐观锁支持，在Column上指定casVersion为true即生效
