--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-v0.9.4 - [improve] jsqlparser升级至2.1
+v0.9.4 - [update] jsqlparser升级至2.1
+       - [improve] 明确@Table的alias别名的影响范围
 
 2019年5月22日
 v0.9.3 - [add] 增加新增、修改、删除操作时，自动通过mvel脚本获取值的能力
