增加java.util.Date到java.sql.Time的类型映射

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ v0.9.4 - [update] jsqlparser升级至2.1
        - [improve] 明确@Table的alias别名的影响范围
        - [move] 将SubQuery从bean包移动到model包
        - [add] 支持动态指定表名，适合于分表的场景
+       - [fix] 增加java.util.Date到java.sql.Time的类型映射
 
 2019年5月22日
 v0.9.3 - [add] 增加新增、修改、删除操作时，自动通过mvel脚本获取值的能力
