重名JSON为NimbleOrmJSON，避免被外部误引用到

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 
 v0.9.6 - [improve] 当分页查询传入page小于1时，抛出InvalidParameterException异常
+       - [rename] 重名JSON为NimbleOrmJSON，避免被外部误引用到
 
 2019年9月6日
 v0.9.5 - [improve] 替换SQL_CALC_FOUND_ROWS以提升性能，接口、功能逻辑及正确性无变化
