--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,9 @@
 v0.9.8 - [improve] 使用jdbc keyHolder替换SELECT LAST_INSERT_ID()，减少对MySQL及事务的依赖
-
+       - [add] 增加线程范围内(临时)关闭指定类的软删除设置，turnOffSoftDelete
 
 2020年6月4日
 v0.9.7 - [add] Column支持对String类型的字段设置最大字符数
-       - [del] 重大变化：去掉了插入和更新的@Transactional注解，以后多条插入或更新时，是否需要事务由调用者自行决定，因此支持多数据源多事务
+       - [del] 重大变化：去掉了插入和更新的@Transactional注解，以后多条插入或更新时，是否需要事务由调用者自行决定，因此此版本开始，能支持多数据源多事务
 
 2019年12月20日
 v0.9.6 - [improve] 当分页查询传入page小于1时，抛出InvalidParameterException异常
