升级jackson至2.10.4，mvel至2.4.8.Final

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v0.9.8 - [improve] 使用jdbc keyHolder替换SELECT LAST_INSERT_ID()，减少对MySQL及事务的依赖
        - [add] 增加线程范围内(临时)关闭指定类的软删除设置，turnOffSoftDelete
        - [del] 标记废弃insertWhereNotExist和insertWithNullWhereNotExist两个方法，短期内不会删除，但标记为在高并发情况下，可能有性能问题，如果使用，请加好索引
+       - [upgrade] 升级jackson至2.10.4，mvel至2.4.8.Final
 
 2020年6月4日
 v0.9.7 - [add] Column支持对String类型的字段设置最大字符数
