--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-v1.0.0 -
+v1.0.0 - [enhance] getCount和Page的total等返回记录总数的类型由int升级为long
 
 2020年12月16日
 v0.9.9 - [add] 增加getRaw和getRawCount方法，支持自定义SQL查询，适用于统计类SQL
