--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-v1.0.0 - [enhance] getCount和Page的total等返回记录总数的类型由int升级为long
+v1.0.0 - [add] 关联查询RelatedColumn支持对computed计算值进行关联，从而支持多字段关联查询
+       - [enhance] getCount和Page的total等返回记录总数的类型由int升级为long
        - [enhance] IDBHelperDataService接口的返回值泛型化，支持各种类型返回，实现者不需要强制转换成Object了
        - [fix] 修复当RelateColumn注解的remoteColumn的值是SQL关键词时导致SQL异常的问题
 
