--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 v1.0.1 - [del] 移除类缓存的WARN日志，框架允许没有setter方法
        - [fix] 对于字段是java.util.Date类型，只查询到日期而查询不到时间的问题
+       - [enhance] 对于需要传参的调用，如果SQL占位符的个数和给定的参数不一致，则打ERROR日志(不会停止查询)；这是对jdbcTemplate的优化，jdbcTemplate只会检查出参数个数小于占位符个数的情况，不会检查出参数个数大于占位符个数，但这往往是错误的
 
 2021年2月18日
 v1.0.0 - [upgrade] 【重要】jdk最低支持版本由1.6升级为1.8，不再支持低版本jdk 1.6
