--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-v1.0.3 - [enhance] turnOffSoftDelete和turnOnSoftDelete支持传入多个参数
+v1.0.3 - [add] 增加getByExample方法
+       - [enhance] turnOffSoftDelete和turnOnSoftDelete支持传入多个参数
        - [enhance] 增加3种日期格式的解析
 
 2021年6月30日
