--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.0.5 - [add] getRaw方法支持转换基本类型，如String.class/Integer.class
+
 2021年9月20日
 v1.0.4 - [add] 增加当计算列是sum()时，自动将null转成0的特性，并支持关闭该特性
        - [fix] 修复当计算列参与到postSql计算时，getCount计算总数时抛出SQL语法错误的bug
