--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 v1.0.5 - [add] getRaw方法支持转换基本类型，如String.class/Integer.class
+       - [add] PageData类增加trans方法，支持转变类型
 
 2021年9月20日
 v1.0.4 - [add] 增加当计算列是sum()时，自动将null转成0的特性，并支持关闭该特性
