insert update的接口参数类型由List扩展为Collection

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 v1.1.1 - [enhance] 对于select的字段，如果已经出现重复的名称，那么子类会覆盖父类；DO的setter同理
-                   【注意】升级至此版本，请先检查下项目一个DO类及其子类@Column注解有没有出现value重复的情况，确保没有
-       - [enhance] getByKeyList/insert/insertBatchWithoutReturnId的接口参数类型由List扩展为Collection
+                   【注意】升级至此版本，请先检查下项目一个DO类及其子类@Column注解有没有出现value重复的情况，确保没有重复
+       - [enhance] getByKeyList/insert/update等的接口参数类型由List扩展为Collection
 
 2021年9月23日
 v1.1.0 - [add] 【重要升级和变动】RelatedColumn支持多列进行关联查询；
