--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2021年12月8日
+v1.1.3 - [add] 支持手工开启log.info打印实际执行的sql，默认是以log.debug级别打印；
+               使用turnOnFeature(FeatureEnum.LOG_SQL_AT_INFO_LEVEL)开启
+
 2021年11月18日
 v1.1.2 - [enhance] JSON=true的成员变量支持嵌套泛型和大于2个的泛型，之前只支持1或2个泛型
 
