--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-v1.1.4 - [enhance] 当@RelatedColumn的extraWhere SQL语法错误时，抛出异常，原来是忽略extraWhere，可能导致错误
+2021年12月15日
+v1.1.4 - [add] 支持@RelatedColumn中写limit子句，明确说明这样走不了批量，性能会显著下降
+       - [enhance] 当@RelatedColumn的extraWhere SQL语法错误时，抛出异常，原来是忽略extraWhere，可能导致错误
 
 2021年12月8日
 v1.1.3 - [add] 支持手工开启log.info打印实际执行的sql，默认是以log.debug级别打印；
