--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.3.2 - [add] @RelatedColumn支持指定DBHelper的bean名称来指定不同的数据源
+
 2022年7月11日
 v1.3.1 - [enhance] 移除当@RelatedColumn使用conditional属性时，关联不上对象时打印的error日志(不影响结果正确性)
 
