--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 v1.3.3 - [enhance] 当RelatedColumn的localColumn和remoteColumn属性值有错时抛出异常，代替原来的error日志
+       - [enhance] RelatedColumn的localColumn和remoteColumn属性不区分大小写
 
 2022年8月2日
 v1.3.2 - [add] @RelatedColumn支持指定DBHelper的bean名称来指定不同的数据源
