对空List的SQL参数进行自动处理时，不改变原List的值

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.3.6 - [enhance] 对空List的SQL参数进行自动处理时，不改变原List的值
+
 2022年9月19日
 v1.3.5 - [fix] 修复getRaw传递Map.class时，无法拿到字段as别名的bug
        - [enhance] 对不支持rs.getTimestamp的驱动，增加orm解析Date的支持
