--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v1.3.7 - [add] 支持Stream流式查询方法：getAllForStream和getRawForStream方法
+       - [deprecated] 标记废弃getRawCount方法
+
 2022年10月21日
 v1.3.6 - [enhance] 对空List的SQL参数进行自动处理时，不改变原List的值
        - [enhance] 对于字段是java.util.Date类型，明确转换为java.util.Date类型，不再使用其子类例如java.sql.Date
