--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-v1.3.8 - [enhance] 优化批量插入的SQL log
+2022年12月14日
+v1.4.0 - [enhance] 将单元测试代码独立出来
+       - [enhance] 优化批量插入的SQL log
 
 2022年10月28日
 v1.3.7 - [add] 支持Stream流式查询方法：getAllForStream和getRawForStream方法
