--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,8 @@ v1.4.2 - [add] 批量插入支持数据库默认值(即当插入为null时使用
        - [enhance] 优化批量插入日志和不插入不需要的字段，提升50+%批量插入性能
        - [enhance] 优化insert(list)方法，当满足批量插入条件(主键有值)时，自动转换成批量插入
        - [enhance] @Column的setTimeWhenInsert/Update/Delete的属性支持除了Date外的LocalDateTime/LocalDate等7种类型
-       - [deprecated] 标记废弃insertOrUpdateFull和insertOrUpdateFullWithNull方法
+       - [deprecated] 标记废弃insertOrUpdateFull、insertOrUpdateFullWithNull方法
+       - [deprecated] 标记废弃insertOrUpdateWithNull(list)、updateWithNull(list)方法
 
 2022年12月24日
 v1.4.1 - [add] 支持JoinTable中写@RelatedColumn直接关联DO/JoinTable类
