--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 v1.4.3 - [del] 删除@ExcludeInheritedColumn，推荐使用@Table的sameTableNameAs指定表名或直接指定表名
        - [del] 删除SubQuery子查询参数功能
+       - [del] 删除insertOrUpdateFull、insertOrUpdateFullWithNull方法
+       - [del] 删除insertOrUpdateWithNull(list)、updateWithNull(list)方法
 
 2023年1月7日
 v1.4.2 - [add] 批量插入支持数据库默认值(即当插入为null时使用数据库默认值)，此外mysql不需要再设置rewriteBatchedStatements=TRUE参数
