--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-v1.4.3 - [enhance] 优化接口定义，setGlobalComment/setLocalComment定义为接口静态方法，对所有DBHelper实例生效
+v1.4.3 - [enhance] 优化接口定义，setTableName/resetTableNames/turnOffSoftDelete/turnOnSoftDelete
+                   /setGlobalComment/setLocalComment定义为接口静态方法，对所有DBHelper实例生效
+                   【升级须知】对于这6个方法的调用，需要由实例方式调用改成接口静态方法调用
        - [del] 删除@ExcludeInheritedColumn，推荐使用@Table的sameTableNameAs指定表名或直接指定表名
        - [del] 删除SubQuery子查询参数功能
        - [del] 删除insertOrUpdateFull、insertOrUpdateFullWithNull方法
