--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v1.4.3 - [enhance] 优化接口定义，setTableName/resetTableNames/turnOffSoftDelete/turnOnSoftDelete
                    /setGlobalComment/setLocalComment定义为接口静态方法，对所有DBHelper实例生效
                    【升级须知】对于这6个方法的调用，需要由实例方式调用改成接口静态方法调用
+       - [add] 增加nimbleorm内置JSON解析对LocalDate/LocalDateTime/LocalTime的扩展支持，支持更多的时间日期格式
        - [del] 删除@ExcludeInheritedColumn，推荐使用@Table的sameTableNameAs指定表名或直接指定表名
        - [del] 删除SubQuery子查询参数功能
        - [del] 删除insertOrUpdateFull、insertOrUpdateFullWithNull方法
