--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.4.4 - [enhance] clickhouse22.2以下版本不支持insert into default，因此改成null，支持全版本clickhouse
+
 2023年2月28日
 v1.4.3 - [enhance] 优化接口定义，setTableName/resetTableNames/turnOffSoftDelete/turnOnSoftDelete
                    /setGlobalComment/setLocalComment定义为接口静态方法，对所有DBHelper实例生效
