--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 v1.4.5 - [enhance] 数据库类型databaseType的获取支持lazy初始化，不会因为数据库连接异常导致Spring容器启动不了
        - [add] WhereSQL新增getSQLForWhereAppend方法，用于追加到where and的SQL片段
+       - [add] 提供WhereSQLForNamedParam，支持命名参数的whereSQL
 
 2023年3月2日
 v1.4.4 - [enhance] clickhouse22.2以下版本不支持insert into default，因此改成null，支持全版本clickhouse
