--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v1.4.6 - [deprecated] 废弃deleteByKey(Class<T> clazz, Object keyValue)方法
+       - [deprecated] deleteByKey(T t)和deleteByKey(Collection<T> list)标记重命名为delete(T t)和deleteByKey(Collection<T> list)
+
 2023年4月8日
 v1.4.5 - [add] 支持真正的批量update，提高批量update的性能10-100倍
        - [enhance] 数据库类型databaseType的获取支持lazy初始化，不会因为数据库连接异常导致Spring容器启动不了
