--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 v1.5.0 - [del] 移除deleteByKey 3个方法，请用delete方法代替
        - [del] 移除turnOffSoftDelete和turnOnSoftDelete方法
+       - [add] 提供withTableNames方法，支持动态自定义表名
 
 2023年4月12日
 v1.4.6 - [deprecated] 废弃deleteByKey(Class<T> clazz, Object keyValue)方法
