--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v1.5.0 - [del] 移除deleteByKey 3个方法，请用delete方法代替
        - [del] 移除turnOffSoftDelete和turnOnSoftDelete方法
        - [add] 提供withTableNames方法，支持动态自定义表名
+       - [add] 提供@Table的softDeleteTable和softDeleteDBHelperBean属性，支持第二种方式的软删除
 
 2023年4月12日
 v1.4.6 - [deprecated] 废弃deleteByKey(Class<T> clazz, Object keyValue)方法
