--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ v1.5.0 - [del] 移除deleteByKey 3个方法，请用delete方法代替
        - [add] 提供withTableNames方法，支持动态自定义表名
        - [add] 提供@Table的softDeleteTable和softDeleteDBHelperBean属性，支持第二种方式的软删除
        - [add] WhereSQL增加andIf/orIf/notIf方法，支持条件判断
+       - [add] 新增开启和关闭缓存的开关，默认开启缓存，支持关闭缓存
 
 2023年4月12日
 v1.4.6 - [deprecated] 废弃deleteByKey(Class<T> clazz, Object keyValue)方法
