--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.5.1 - [add] WhereSQL的limit支持long类型，支持更大的offset数值
+
 2023年4月14日
 v1.5.0 - [del] 移除deleteByKey 3个方法，请用delete方法代替
        - [del] 移除turnOffSoftDelete和turnOnSoftDelete方法
