--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.5.2 - [upgrade] jsqlparser由4.5升级到4.6
+
 2023年4月30日
 v1.5.1 - [add] WhereSQL的limit支持long类型，支持更大的offset数值
        - [del] 移除setTableName和resetTableNames方法，推荐使用withTableNames方法
