--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.5.5 - [enhance] 分页limit的偏移修改成offset，更标准，支持更多的数据库
+
 2023年6月26日
 v1.5.4 - [add] 增加int insertBatchWithoutReturnId(String tableName, Collection<Map<String, Object>> list)和
                    int insertBatchWithoutReturnId(String tableName, List<String> cols, Collection<Object[]> values) 方法
