--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.5.7 - [enhance] 对于virtualTable的postSql，自动在前面加上回车符，避免自定义sql最后一行是注释且没有换行时，postSql失效
+
 2023年8月27日
 v1.5.6 - [fix] 修复当Table为virtualTable虚拟表时，where条件没有写时，生成的SQL语法错误的问题
 
