--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 v1.5.8 - [enhance] 对于clickhouse，byte[]数据类型自动转换成base64存储，查询时自动还原
+       - [enhance] 拦截器基类DBHelperInterceptor改成接口
 
 2023年10月28日
 v1.5.7 - [fix] 修复getDatabaseType方法没有关闭Connection的问题，它会占用一个数据库连接，修复后不占用
