--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 v1.6.3 - [add] 打印SQL时增加打印该SQL对应的源码文件和行号
+       - [enhance] logSQL时直接将sql和参数合并成可执行的SQL打印出来
 
 2024年3月26日
 v1.6.2 - [enhance] 当getRaw/getRawOne/getRawForStream的args参数只传入Map类型时，自动转成单Map参数的方法
