--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.6.4 - [add] SQLAssemblyUtils增加拼凑WhereSQL为实际可执行sql的工具方法
+
 2024年5月2日
 v1.6.3 - [add] 打印SQL时增加打印该SQL对应的源码文件和行号
        - [enhance] logSQL时直接将sql和参数合并成可执行的SQL打印出来
