--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.6.7 - [fix] 修复del表方式的软删除，删除数据丢失的问题
+
 2024年7月15日
 v1.6.6 - [downgrade] 由于jsqlparser 5.0只支持java 11以上，因此先降级jsqlparser为4.9，最后一个支持jdk8的版本，1年后orm将升级到java11以上
 
