--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.6.8 - [enhance] 支持自动降级处理mysql max package太小的限制
+
 2024年8月28日
 v1.6.7 - [fix] 修复del表方式的软删除，删除数据丢失的问题
        - [enhance] 当请求参数有多个，但入参仅有一个list时，提示用户转成数组
