--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v1.7.0 - [refactor]【升级须知】IDBHelperDataService名称变更为DBHelperDataService; IDBHelperSlowSqlCallback变更为DBHelperSlowSqlCallback
                     DBHelperSlowSqlCallback的callback参数增加int batchSize参数，可以获得批量操作的数据量
        - [add] 增加DBHelperSqlCallback，可以获得执行的所有sql
+       - [add] 增加@WhereColumn注解，调用WhereSQL.buildFromAnnotation可以生成WhereSQL
 
 2024年10月25日
 v1.6.8 - [enhance] 支持自动降级处理mysql max package太小的限制
