--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 
-v1.7.1 -
+v1.7.1 - [add] DBHelper.getRaw方法增加支持内置类型RowData，该类型获取指定数据类型要优于Map.class
 
 2024年11月23日
 v1.7.0 - [refactor]【升级须知】IDBHelperDataService名称变更为DBHelperDataService; IDBHelperSlowSqlCallback变更为DBHelperSlowSqlCallback
