优化批量delete时，DO类带有deleteValueScript的性能，支持批量性能了

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.7.5 - [enhance] 优化批量delete时，DO类带有deleteValueScript的性能，支持批量性能了
+
 2025年4月23日
 v1.7.4 - [enhance] 对于getRaw方法，自动移除sql末尾的分号
        - [enhance] 优化delete(Class,postSql,args)方法，支持有拦截器且DO类没有key的情况
